src/objects/VSU__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VSUs</relationshipLabel>
        <relationshipName>VSUs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alternate_Webshop_Platform__c</fullName>
        <inlineHelpText>If &quot;Other&quot; was selected as Alternate Webshop Platform. please list the Alternate Webshop Platform name</inlineHelpText>
        <label>Alternate Webshop Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>GLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swipbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladkompagniet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danske fragtmænd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customers_Using_Other_Distributors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customers Using Other Distributors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_for_Implementing_VSU__c</fullName>
        <label>Date for Implementing VSU</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Listing_as_Primary_Distributor__c</fullName>
        <label>Date for Listing as Primary Distributor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Showing_Name_and_Logo__c</fullName>
        <label>Date for Showing Name and Logo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Name_and_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Postnord/PostDK name and logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Registered_User__c</fullName>
        <inlineHelpText>Email address for updates or newsletters regarding VSU</inlineHelpText>
        <label>Email Registered User</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Web_Agency_or_Inhouse__c</fullName>
        <inlineHelpText>Name of customers web agency</inlineHelpText>
        <label>External Web Agency or In-House</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Listed_as_Primary_Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PostNord/PostDanmark is default first choice amongst other distributors</inlineHelpText>
        <label>Listed as Primary Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listed_as_Standard_Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PostNord/PostDanmark is listed randomly amongst other distributors</inlineHelpText>
        <label>Listed as Standard Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Amount__c</fullName>
        <inlineHelpText>Minimum amount for obtaining free Freight</inlineHelpText>
        <label>Minimum Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nordic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is customer using VSU in the nordic countries</inlineHelpText>
        <label>Nordic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_is_Sole_Supplier_of_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Webshop only displays PostNord/PostDanmark</inlineHelpText>
        <label>PN is Sole Supplier of Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_VSU_Implemented__c</fullName>
        <label>Reason for No VSU Implemented</label>
        <picklist>
            <picklistValues>
                <fullName>In pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to wait for company&apos;s IT policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive to implement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too problematic to implement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There is no available module to customers IT platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Competitor__c</fullName>
        <label>Secondary Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Connection__c</fullName>
        <inlineHelpText>real time connection to PostNord API or download of all PostNord servicepoints in the Webshop&apos;s IT system (batch)</inlineHelpText>
        <label>Type of Connection</label>
        <picklist>
            <picklistValues>
                <fullName>API Realtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch/List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uden_Omdeling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If no VSU on webshop, is webshop using &quot;Uden Omdeling&quot;</inlineHelpText>
        <label>Uden Omdeling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSU_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VSU Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>VSUs</relationshipLabel>
        <relationshipName>VSUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VSU_on_Webshop__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>VSU is implemented on webshop</inlineHelpText>
        <label>VSU on Webshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webshop_Offers_Free_Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webshop Offers Free Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webshop_Offers_Free_Return_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webshop Offers Free Return Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webshop_Platform__c</fullName>
        <inlineHelpText>Which e-commerce platform is used for Webshop?</inlineHelpText>
        <label>Webshop Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Dandomain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scannet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft (Sharepoint)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open source: Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golden Planet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woo Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drupal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestashop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zen cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joomla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oscommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webshop_URL__c</fullName>
        <inlineHelpText>please enter in format of http://www. 
example: http://www.postnord.com</inlineHelpText>
        <label>Webshop URL (www.)</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>VSU</label>
    <nameField>
        <displayFormat>VSU-{0000}</displayFormat>
        <label>VSU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VSUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>